# crust0s

./: .gitignore  build.sh  packages.x86_64  pacman.conf  profiledef.sh
.github/workflows/: publish-repo.yml
airootfs/boot/loader/: loader.conf
airootfs/boot/loader/entries/: crust-x86_64-linux.conf  crust-x86_64-zen.conf
airootfs/etc/: crust-update.conf  hostname  hosts  vconsole.conf
airootfs/etc/bluetooth/: main.conf
airootfs/etc/calamares/modules/: bootloader.conf  displaymanager.conf  initcpiocfg.conf  packages.conf  services.conf  unpackfs.conf
airootfs/etc/environment.d/: 99-crust-wayland.conf
airootfs/etc/mkinitcpio.conf.d/: crust.conf
airootfs/etc/modprobe.d/: 99-crust-nvidia.conf
airootfs/etc/pacman.d/: mirrorlist
airootfs/etc/pacman.d/hooks/: 90-crust-snap-boot.hook  95-snapper-pre.hook
airootfs/etc/plymouth/: plymouthd.conf
airootfs/etc/polkit-1/rules.d/: 10-crust-update.rules
airootfs/etc/sddm.conf.d/: 00-crust-cosmic.conf
airootfs/etc/skel/.config/: mimeapps.list
airootfs/etc/sysctl.d/: 99-crust-performance.conf
airootfs/etc/systemd/journald.conf.d/: 60-crust-persist.conf
airootfs/usr/lib/tmpfiles.d/: crust.conf
airootfs/usr/share/applications/: crust-update.desktop  (+1 more)
calamares/: settings.conf
calamares/brand/crustos/: crustos.desc
calamares/modules/: shellprocess.yaml
cosmic-settings-update/: Cargo.toml  Makefile
cosmic-settings-update/src/: main.rs
efiboot/loader/: loader.conf
efiboot/loader/entries/: archiso-x86_64-linux.conf  archiso-x86_64-zen.conf
images/: README.md  ascii_logo.txt
repo/: update.json
(+6 files in other folders)
