[package]
name = "cosmic-settings-update"
version = "1.0.0"
edition = "2021"
description = "Crust OS Software Update panel for COSMIC Settings"

[dependencies]
cosmic = { git = "https://github.com/pop-os/cosmic-epoch", package = "cosmic" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
